--- a/Attention.ipynb
+++ b/Attention.ipynb
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,38 +783,62 @@
     "#!pip install torchtext spacy\n",
     "#!python -m spacy download en\n",
     "#!python -m spacy download de\n",
-    "import spacy\n",
-    "spacy_de = spacy.load('de')\n",
-    "spacy_en = spacy.load('en')\n",
+    "def load():\n",
+    "    import spacy\n",
+    "    spacy_de = spacy.load('de')\n",
+    "    spacy_en = spacy.load('en')\n",
     "\n",
-    "def tokenize_de(text):\n",
-    "    return [tok.text for tok in spacy_de.tokenizer(text)]\n",
+    "    def tokenize_de(text):\n",
+    "        return [tok.text for tok in spacy_de.tokenizer(text)]\n",
     "\n",
-    "def tokenize_en(text):\n",
-    "    return [tok.text for tok in spacy_en.tokenizer(text)]\n",
+    "    def tokenize_en(text):\n",
+    "        return [tok.text for tok in spacy_en.tokenizer(text)]\n",
     "\n",
-    "BOS_WORD = '<s>'\n",
-    "EOS_WORD = '</s>'\n",
-    "BLANK_WORD = \"<blank>\"\n",
-    "SRC = data.Field(tokenize=tokenize_de)\n",
-    "TGT = data.Field(tokenize=tokenize_en, init_token = BOS_WORD, eos_token = EOS_WORD, pad_token=BLANK_WORD) # only target needs BOS/EOS\n",
+    "    BOS_WORD = '<s>'\n",
+    "    EOS_WORD = '</s>'\n",
+    "    BLANK_WORD = \"<blank>\"\n",
+    "    SRC = data.Field(tokenize=tokenize_de)\n",
+    "    TGT = data.Field(tokenize=tokenize_en, init_token = BOS_WORD, eos_token = EOS_WORD, pad_token=BLANK_WORD) # only target needs BOS/EOS\n",
     "\n",
-    "MAX_LEN = 100\n",
-    "train, val, test = datasets.IWSLT.splits(exts=('.de', '.en'), fields=(SRC, TGT), \n",
-    "                                         filter_pred=lambda x: len(vars(x)['src']) <= MAX_LEN and \n",
-    "                                         len(vars(x)['trg']) <= MAX_LEN)\n",
-    "MIN_FREQ = 2\n",
-    "SRC.build_vocab(train.src, min_freq=MIN_FREQ)\n",
-    "TGT.build_vocab(train.trg, min_freq=MIN_FREQ)\n",
+    "    MAX_LEN = 100\n",
+    "    train, val, test = datasets.IWSLT.splits(exts=('.de', '.en'), fields=(SRC, TGT), \n",
+    "                                             filter_pred=lambda x: len(vars(x)['src']) <= MAX_LEN and \n",
+    "                                             len(vars(x)['trg']) <= MAX_LEN)\n",
+    "    MIN_FREQ = 2\n",
+    "    SRC.build_vocab(train.src, min_freq=MIN_FREQ)\n",
+    "    TGT.build_vocab(train.trg, min_freq=MIN_FREQ)\n",
     "\n",
-    "BATCH_SIZE = 32\n",
-    "train_iter, val_iter = data.BucketIterator.splits((train, val), batch_size=BATCH_SIZE, device=0,\n",
-    "                                                  repeat=False, sort_key=lambda x: len(x.src))"
+    "    BATCH_SIZE = 32\n",
+    "    train_iter, val_iter = data.BucketIterator.splits((train, val), batch_size=BATCH_SIZE, device=0,\n",
+    "                                                      repeat=False, sort_key=lambda x: len(x.src))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BOS_WORD = '<s>'\n",
+    "EOS_WORD = '</s>'\n",
+    "BLANK_WORD = \"<blank>\"\n",
+    "SRC = data.Field()\n",
+    "TGT = data.Field(init_token = BOS_WORD, eos_token = EOS_WORD, pad_token=BLANK_WORD) # only target needs BOS/EOS\n",
+    "\n",
+    "MAX_LEN = 100\n",
+    "train = datasets.TranslationDataset(path=\"/n/home00/srush/Data/baseline-1M_train.tok.shuf\", \n",
+    "                                    exts=('.en', '.fr'),\n",
+    "                                    fields=(SRC, TGT), \n",
+    "                                    filter_pred=lambda x: len(vars(x)['src']) <= MAX_LEN and \n",
+    "                                         len(vars(x)['trg']) <= MAX_LEN)\n",
+    "MIN_FREQ = 1\n",
+    "SRC.build_vocab(train.src, min_freq=MIN_FREQ)\n",
+    "TGT.build_vocab(train.trg, min_freq=MIN_FREQ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,13 +851,12 @@
     "        model_opt.step()\n",
     "        model_opt.optimizer.zero_grad()\n",
     "        if i % 100 == 1:\n",
-    "            print(loss)\n",
-    "        "
+    "            print(loss)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -850,14 +873,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "1\n"
      ]
     },
     {
@@ -941,7 +964,7 @@
        "  )\n",
        "  (src_embed): Sequential(\n",
        "    (0): Embeddings(\n",
-       "      (lut): Embedding(58794, 512)\n",
+       "      (lut): Embedding(108404, 512)\n",
        "    )\n",
        "    (1): PositionalEncoding(\n",
        "      (dropout): Dropout(p=0.1)\n",
@@ -949,19 +972,19 @@
        "  )\n",
        "  (tgt_embed): Sequential(\n",
        "    (0): Embeddings(\n",
-       "      (lut): Embedding(36321, 512)\n",
+       "      (lut): Embedding(125375, 512)\n",
        "    )\n",
        "    (1): PositionalEncoding(\n",
        "      (dropout): Dropout(p=0.1)\n",
        "    )\n",
        "  )\n",
        "  (generator): Generator(\n",
-       "    (proj): Linear(in_features=512, out_features=36321)\n",
+       "    (proj): Linear(in_features=512, out_features=125375)\n",
        "  )\n",
        ")"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,6 +1000,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE = 32\n",
+    "train_iter = data.BucketIterator(train, batch_size=BATCH_SIZE, device=0,\n",
+    "                                 repeat=False, sort_key=lambda x: len(x.src))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -984,24 +1020,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.526158034801483\n",
-      "10.024358034133911\n",
-      "8.805318236351013\n",
-      "7.279826104640961\n",
-      "5.778346508741379\n",
-      "5.295944482088089\n",
-      "5.729755278676748\n",
-      "5.563303157687187\n",
-      "5.308605615049601\n",
-      "4.336858004331589\n",
-      "5.5949517339468\n",
-      "5.3982512056827545\n",
-      "4.834059786051512\n",
-      "4.9475081115961075\n",
-      "3.954018749296665\n",
-      "4.748208552598953\n",
-      "5.783925075083971\n",
-      "5.669358607381582\n"
+      "1\n",
+      "125375\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pad_idx)\n",
+    "print(len(TGT.vocab))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.76354792714119\n"
      ]
     }
    ],
