--- a/Attention.ipynb
+++ b/Attention.ipynb
@@ -97,11 +97,11 @@
     "        \n",
     "    def forward(self, src, tgt):\n",
     "        src_mask = (src != self.pad_idx).unsqueeze(-2)\n",
-    "        tgt_mask = (tgt != self.pad_idx).unsqueeze(-1) \n",
+    "        tgt_mask = (tgt != self.pad_idx).unsqueeze(-2)\n",
     "        tgt_mask = tgt_mask & Variable(subsequent_mask(tgt.size(-1)).type_as(tgt_mask.data))\n",
     "        memory = self.encoder(self.src_embed(src), src_mask)\n",
     "        output = self.decoder(self.tgt_embed(tgt), memory, src_mask, tgt_mask)\n",
-    "        return output"
+    "        return output\n"
    ]
   },
   {
@@ -141,12 +141,14 @@
     "    def __init__(self, layer, N):\n",
     "        super(Encoder, self).__init__()\n",
     "        self.layers = clones(layer, N)\n",
-    "\n",
+    "        self.norm = LayerNorm(layer.size)\n",
+    "        \n",
     "    def forward(self, x, mask):\n",
     "        \"Pass the input through each layer in turn.\"\n",
+    "        x_norm = self.norm(x)\n",
     "        for layer in self.layers:\n",
-    "            x = layer(x, mask)\n",
-    "        return x"
+    "            x, x_norm = layer(x, x_norm, mask)\n",
+    "        return x_norm"
    ]
   },
   {
@@ -200,8 +202,9 @@
     "        self.norm = LayerNorm(size)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "\n",
-    "    def forward(self, x, sublayer, mask=None):\n",
-    "        return self.norm(x + self.dropout(sublayer(x)))"
+    "    def forward(self, x, x_norm, sublayer):\n",
+    "        prenorm = x + self.dropout(sublayer(x_norm))\n",
+    "        return prenorm, self.norm(prenorm)"
    ]
   },
   {
@@ -233,10 +236,11 @@
     "        self.self_attn = self_attn\n",
     "        self.feed_forward = feed_forward\n",
     "        self.sublayer = clones(SublayerConnection(size, dropout), 2)\n",
+    "        self.size = size\n",
     "\n",
-    "    def forward(self, x, mask):\n",
-    "        x = self.sublayer[0](x, lambda x: self.self_attn(x, mask=mask))\n",
-    "        return self.sublayer[1](x, self.feed_forward)"
+    "    def forward(self, x, x_norm, mask):\n",
+    "        x, x_norm = self.sublayer[0](x, x_norm, lambda x: self.self_attn(x, mask=mask))\n",
+    "        return self.sublayer[1](x, x_norm, self.feed_forward)"
    ]
   },
   {
@@ -257,15 +261,16 @@
    "outputs": [],
    "source": [
     "class Decoder(nn.Module):\n",
-    "    def __init__(self, layer, num_layers):\n",
+    "    def __init__(self, layer, N):\n",
     "        super(Decoder, self).__init__()\n",
-    "        self.layers = clones(layer, num_layers)\n",
-    "\n",
-    "    def forward(self, inputs, memory, src_mask, tgt_mask):\n",
-    "        out = inputs\n",
+    "        self.layers = clones(layer, N)\n",
+    "        self.norm = LayerNorm(layer.size)\n",
+    "        \n",
+    "    def forward(self, x, memory, src_mask, tgt_mask):\n",
+    "        x_norm = self.norm(x)\n",
     "        for layer in self.layers:\n",
-    "            out = layer(out, memory, src_mask, tgt_mask)\n",
-    "        return out"
+    "            x, x_norm = layer(x, x_norm, memory, src_mask, tgt_mask)\n",
+    "        return x_norm"
    ]
   },
   {
@@ -286,16 +291,17 @@
     "class DecoderLayer(nn.Module):\n",
     "    def __init__(self, size, self_attn, src_attn, feed_forward, dropout):\n",
     "        super(DecoderLayer, self).__init__()\n",
+    "        self.size = size\n",
     "        self.self_attn = self_attn\n",
     "        self.src_attn = src_attn\n",
     "        self.feed_forward = feed_forward\n",
     "        self.sublayer = clones(SublayerConnection(size, dropout), 3)\n",
     " \n",
-    "    def forward(self, x, memory, src_mask, tgt_mask):\n",
+    "    def forward(self, x, x_norm, memory, src_mask, tgt_mask):\n",
     "        m = memory\n",
-    "        x = self.sublayer[0](x, lambda x: self.self_attn(x, mask=tgt_mask))\n",
-    "        x = self.sublayer[1](x, lambda x: self.src_attn(x, m, m, src_mask))\n",
-    "        return self.sublayer[2](x, self.feed_forward)"
+    "        x, x_norm = self.sublayer[0](x, x_norm, lambda x: self.self_attn(x, mask=tgt_mask))\n",
+    "        x, x_norm = self.sublayer[1](x, x_norm, lambda x: self.src_attn(x, m, m, src_mask))\n",
+    "        return self.sublayer[2](x, x_norm, self.feed_forward)"
    ]
   },
   {
@@ -319,8 +325,7 @@
     "    \"Mask out subsequent positions.\"\n",
     "    attn_shape = (1, size, size)\n",
     "    subsequent_mask = np.triu(np.ones(attn_shape), k=1).astype('uint8')\n",
-    "    return torch.from_numpy(subsequent_mask)\n",
-    "    "
+    "    return torch.from_numpy(subsequent_mask) == 0"
    ]
   },
   {
@@ -361,9 +366,9 @@
     "def attention(query, key, value, mask=None, dropout=0.0):\n",
     "    scores = torch.matmul(query, key.transpose(-2, -1)) / math.sqrt(query.size(-1))\n",
     "    if mask is not None:\n",
-    "        scores = scores.masked_fill(mask, -1e9)\n",
-    "    attn = F.dropout(F.softmax(scores, dim = -1), p=dropout)\n",
-    "    return torch.matmul(attn, value)"
+    "        scores = scores.masked_fill(mask == 0, -1e9)\n",
+    "    attn = F.softmax(scores, dim = -1)\n",
+    "    return torch.matmul(F.dropout(attn, p=dropout), value), attn"
    ]
   },
   {
@@ -426,7 +431,9 @@
     "        self.d_k = d_model // h\n",
     "        self.h = h\n",
     "        self.p = dropout\n",
-    "        self.linears = clones(nn.Linear(d_model, d_model), 4)        \n",
+    "        self.linears = clones(nn.Linear(d_model, d_model), 4)\n",
+    "        self.attn = None\n",
+    "        \n",
     "    def forward(self, query, key=None, value=None, mask=None):\n",
     "        if key is None:\n",
     "            key = query\n",
@@ -441,7 +448,8 @@
     "        \n",
     "        query, key, value = [shape(l(x)) \n",
     "                             for l, x in zip(self.linears, (query, key, value))]\n",
-    "        x = unshape(attention(query, key, value, mask=mask, dropout=self.p))\n",
+    "        x, self.attn = attention(query, key, value, mask=mask, dropout=self.p)\n",
+    "        x = unshape(x)\n",
     "        return self.linears[-1](x)"
    ]
   },
@@ -509,6 +517,7 @@
     "        super(Embeddings, self).__init__()\n",
     "        self.lut = nn.Embedding(vocab, d_model)\n",
     "        self.d_model = d_model\n",
+    "\n",
     "    def forward(self, x):\n",
     "        return self.lut(x) * math.sqrt(self.d_model)\n",
     "\n",
@@ -555,12 +564,12 @@
     "                             -(math.log(10000.0) / d_model))\n",
     "        pe[:, 0::2] = torch.sin(position * div_term)\n",
     "        pe[:, 1::2] = torch.cos(position * div_term)\n",
-    "        pe = pe.unsqueeze(1)\n",
+    "        pe = pe.unsqueeze(0)\n",
     "        self.register_buffer('pe', pe)\n",
     "        self.dropout = nn.Dropout(p=dropout)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = x + Variable(self.pe[:x.size(0)], requires_grad=False)\n",
+    "        x = x + Variable(self.pe[:, :x.size(1)], requires_grad=False)\n",
     "        return self.dropout(x)"
    ]
   },
@@ -617,19 +626,18 @@
    "outputs": [],
    "source": [
     "def loss_backprop(model, criterion, out, targets, norm):\n",
-    "    out_column = []\n",
+    "    out_grad = []\n",
     "    total = 0\n",
     "    assert out.size(1) == targets.size(1)\n",
     "    for i in range(out.size(1)):\n",
-    "        out_column.append(Variable(out[:, i].data))\n",
-    "        gen = model.generator(out_column[-1])\n",
+    "        out_column = Variable(out[:, i].data, requires_grad=True)\n",
+    "        gen = model.generator(out_column)\n",
     "        loss = criterion(gen, targets[:, i]) / norm\n",
-    "        #print(gen, targets[:, i])\n",
     "        total += loss.data[0]\n",
     "        loss.backward()\n",
-    "        \n",
-    "    out_column = torch.stack(out_column, dim=1)\n",
-    "    torch.autograd.backward(out, out_column)\n",
+    "        out_grad.append(out_column.grad.data.clone())\n",
+    "    out_grad = torch.stack(out_grad, dim=1)\n",
+    "    out.backward(gradient=out_grad)\n",
     "    return total"
    ]
   },
@@ -659,7 +667,7 @@
     "        max_src_in_batch = 0\n",
     "        max_tgt_in_batch = 0\n",
     "    max_src_in_batch = max(max_src_in_batch,  len(new.src) + 2)\n",
-    "    max_tgt_in_batch = max(max_tgt_in_batch,  len(new.tgt) + 1)\n",
+    "    max_tgt_in_batch = max(max_tgt_in_batch,  len(new.trg) + 1)\n",
     "    src_elements = count * max_src_in_batch\n",
     "    tgt_elements = count * max_tgt_in_batch\n",
     "    return max(src_elements, tgt_elements)"
@@ -703,12 +711,14 @@
     "        self.warmup = warmup\n",
     "        self.factor = factor\n",
     "        self.model_size = model_size\n",
+    "        self._rate = 0\n",
     "        \n",
     "    def step(self):\n",
     "        self._step += 1\n",
     "        rate = self.rate()\n",
     "        for p in self.optimizer.param_groups:\n",
     "            p['lr'] = rate\n",
+    "        self._rate = rate\n",
     "        self.optimizer.step()\n",
     "        \n",
     "    def rate(self):\n",
@@ -717,7 +727,7 @@
     "            min(self._step ** (-0.5), self._step * self.warmup**(-1.5)))\n",
     "        \n",
     "def get_opt(model):\n",
-    "    return NoamOpt(model.src_embed[0].d_model, 2, 8000,\n",
+    "    return NoamOpt(model.src_embed[0].d_model, 2, 4000,\n",
     "            torch.optim.Adam(model.parameters(), lr=0, betas=(0.9, 0.98), eps=1e-9))"
    ]
   },
@@ -797,8 +807,9 @@
     "    BOS_WORD = '<s>'\n",
     "    EOS_WORD = '</s>'\n",
     "    BLANK_WORD = \"<blank>\"\n",
-    "    SRC = data.Field(tokenize=tokenize_de)\n",
-    "    TGT = data.Field(tokenize=tokenize_en, init_token = BOS_WORD, eos_token = EOS_WORD, pad_token=BLANK_WORD) # only target needs BOS/EOS\n",
+    "    SRC = data.Field(tokenize=tokenize_de, pad_token=BLANK_WORD)\n",
+    "    TGT = data.Field(tokenize=tokenize_en, init_token = BOS_WORD, \n",
+    "                     eos_token = EOS_WORD, pad_token=BLANK_WORD)\n",
     "\n",
     "    MAX_LEN = 100\n",
     "    train, val, test = datasets.IWSLT.splits(exts=('.de', '.en'), fields=(SRC, TGT), \n",
@@ -831,9 +842,8 @@
     "                                    fields=(SRC, TGT), \n",
     "                                    filter_pred=lambda x: len(vars(x)['src']) <= MAX_LEN and \n",
     "                                         len(vars(x)['trg']) <= MAX_LEN)\n",
-    "MIN_FREQ = 1\n",
-    "SRC.build_vocab(train.src, min_freq=MIN_FREQ)\n",
-    "TGT.build_vocab(train.trg, min_freq=MIN_FREQ)"
+    "SRC.build_vocab(train.src, max_size=50000)\n",
+    "TGT.build_vocab(train.trg, max_size=50000)"
    ]
   },
   {
@@ -845,13 +855,14 @@
     "def train_epoch(train_iter, model, criterion, opt):\n",
     "    for i, batch in enumerate(train_iter):\n",
     "        src, trg = batch.src.transpose(0, 1), batch.trg.transpose(0, 1)\n",
-    "        out = model.forward(src, trg)\n",
-    "        loss = loss_backprop(model, criterion, out[:, :-1], trg[:, 1:], \n",
+    "        out = model.forward(src, trg[:, :-1])\n",
+    "        #print(model.src_embed[0].lut.weight.grad)\n",
+    "        loss = loss_backprop(model, criterion, out, trg[:, 1:], \n",
     "                             (trg[:, 1:] != pad_idx).data.sum())\n",
     "        model_opt.step()\n",
     "        model_opt.optimizer.zero_grad()\n",
     "        if i % 100 == 1:\n",
-    "            print(loss)"
+    "            print(i, loss, model_opt._rate)"
    ]
   },
   {
@@ -865,9 +876,8 @@
     "def valid_epoch(valid_iter, model, criterion):\n",
     "    for batch in valid_iter:\n",
     "        src, trg = batch.src.transpose(0, 1), batch.trg.transpose(0, 1)\n",
-    "        out = model.forward(src, trg)\n",
-    "        print(trg[:, 1:].size(), out[:, :-1].size() )\n",
-    "        loss = loss_backprop(model, criterion, out[:, :-1], trg[:, 1:], \n",
+    "        out = model.forward(src, trg[:, :-1])\n",
+    "        loss = loss_backprop(model, criterion, out, trg[:, 1:], \n",
     "                             (trg[:, 1:] == pad_idx).data.sum())"
    ]
   },
@@ -917,6 +927,8 @@
        "        )\n",
        "      )\n",
        "    )\n",
+       "    (norm): LayerNorm(\n",
+       "    )\n",
        "  )\n",
        "  (decoder): Decoder(\n",
        "    (layers): ModuleList(\n",
@@ -961,10 +973,12 @@
        "        )\n",
        "      )\n",
        "    )\n",
+       "    (norm): LayerNorm(\n",
+       "    )\n",
        "  )\n",
        "  (src_embed): Sequential(\n",
        "    (0): Embeddings(\n",
-       "      (lut): Embedding(108404, 512)\n",
+       "      (lut): Embedding(50002, 512)\n",
        "    )\n",
        "    (1): PositionalEncoding(\n",
        "      (dropout): Dropout(p=0.1)\n",
@@ -972,14 +986,14 @@
        "  )\n",
        "  (tgt_embed): Sequential(\n",
        "    (0): Embeddings(\n",
-       "      (lut): Embedding(125375, 512)\n",
+       "      (lut): Embedding(50004, 512)\n",
        "    )\n",
        "    (1): PositionalEncoding(\n",
        "      (dropout): Dropout(p=0.1)\n",
        "    )\n",
        "  )\n",
        "  (generator): Generator(\n",
-       "    (proj): Linear(in_features=512, out_features=125375)\n",
+       "    (proj): Linear(in_features=512, out_features=50004)\n",
        "  )\n",
        ")"
       ]
@@ -994,21 +1008,36 @@
     "print(pad_idx)\n",
     "model = make_model(len(SRC.vocab), len(TGT.vocab), pad_idx, N=1)\n",
     "model_opt = get_opt(model)\n",
-    "model_opt\n",
     "model.cuda()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "BATCH_SIZE = 32\n",
-    "train_iter = data.BucketIterator(train, batch_size=BATCH_SIZE, device=0,\n",
-    "                                 repeat=False, sort_key=lambda x: len(x.src))"
+    "BATCH_SIZE = 4096\n",
+    "class MyIterator(data.Iterator):\n",
+    "    def create_batches(self):\n",
+    "        if self.train:\n",
+    "            def pool(d, random_shuffler):\n",
+    "                for p in data.batch(d, self.batch_size * 100):\n",
+    "                    p_batch = data.batch(\n",
+    "                        sorted(p, key=self.sort_key),\n",
+    "                        self.batch_size, self.batch_size_fn)\n",
+    "                    for b in random_shuffler(list(p_batch)):\n",
+    "                        yield b\n",
+    "            self.batches = pool(self.data(), self.random_shuffler)\n",
+    "        else:\n",
+    "            self.batches = []\n",
+    "            for b in data.batch(self.data(), self.batch_size,\n",
+    "                                          self.batch_size_fn):\n",
+    "                self.batches.append(sorted(b, key=self.sort_key))\n",
+    "\n",
+    "train_iter = MyIterator(train, batch_size=BATCH_SIZE, device=0,\n",
+    "                        repeat=False, sort_key=lambda x: (len(x.src), len(x.trg)),\n",
+    "                        batch_size_fn=batch_size_fn)"
    ]
   },
   {
@@ -1021,14 +1050,21 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "125375\n"
+      "50002\n"
      ]
     }
    ],
    "source": [
     "print(pad_idx)\n",
-    "print(len(TGT.vocab))"
+    "print(len(SRC.vocab))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1039,7 +1075,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11.76354792714119\n"
+      "1 10.826639115810394 6.987712429686844e-07\n",
+      "101 9.506406679749489 3.56373333914029e-05\n",
+      "201 7.2905372232198715 7.057589553983712e-05\n",
+      "301 6.108151141554117 0.00010551445768827134\n",
+      "401 5.6397312509361655 0.00014045301983670557\n",
+      "501 5.213661937043071 0.00017539158198513977\n",
+      "601 5.340875951573253 0.000210330144133574\n",
+      "701 4.80603325762786 0.00024526870628200823\n",
+      "801 4.388342755846679 0.0002802072684304424\n",
+      "901 4.008200170879718 0.00031514583057887664\n"
      ]
     }
    ],
