--- a/Attention.ipynb
+++ b/Attention.ipynb
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1402,9 +1402,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 9.387827396392822 6.987712429686844e-07\n",
-      "101 8.129486560821533 3.56373333914029e-05\n",
-      "201 6.1223172172904015 7.057589553983712e-05\n"
+      "1 3.269582842476666 0.0005377044714644026\n"
      ]
     }
    ],
@@ -1414,7 +1412,8 @@
     "#criterion = nn.NLLLoss(size_average=False, weight=weight.cuda())\n",
     "criterion = LabelSmoothing(size=len(TGT.vocab), padding_idx=pad_idx, label_smoothing=0.1)\n",
     "criterion.cuda()\n",
-    "train_epoch(train_iter, model, criterion, model_opt)"
+    "for epoch in range(15):\n",
+    "    train_epoch(train_iter, model, criterion, model_opt)"
    ]
   },
   {
